# zero-native

./: .gitignore  CLAUDE.md  Directory.Build.props  README.md  TODO.md  ZeroNative.slnx
.github/workflows/: ci.yml  dotnet.yml  release.yml
.reference/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  app.zon  build.zig  build.zig.zon
.reference/docs/: AGENTS.md  package.json  pnpm-lock.yaml
.reference/examples/: .gitignore  README.md
.reference/examples/android/app/src/main/cpp/: CMakeLists.txt  zero_native.h  zero_native_jni.c
.reference/src/: root.zig
.reference/tests/: README.md
docs/: index.md  neko.yml  velopack.md
docs/guides/: frontend.md  getting-started.md  packaging.md  quick-start.md  velopack.md
docs/reference/: app-model.md  automation.md  bridge.md  debugging.md  dialogs.md  embed.md  extensions.md  manifest.md  security.md  web-engines.md  windows.md
samples/ZeroNative.Sample/: Program.cs  ZeroNative.Sample.csproj
samples/ZeroNative.Sample.Cef/: Program.cs  ZeroNative.Sample.Cef.csproj
samples/ZeroNative.Sample.Kestrel/: Program.cs  README.md  ZeroNative.Sample.Kestrel.csproj
src/ZeroNative/: README.md  WebViewPlatform.cs  ZeroNative.csproj
src/ZeroNative.Cef/: CefAppHandlers.cs  CefNativeWindow.cs  CefPlatform.cs  README.md  ZeroNative.Cef.csproj
src/ZeroNative.Core/: AppDirs.cs  README.md  ZeroNative.Core.csproj  ZeroNative.cs
src/ZeroNative.Templates/: README.md  ZeroNative.Templates.csproj
tests/ZeroNative.Core.Tests/: AppManifestJsonTests.cs  AssetServerTests.cs  AsyncBridgeTests.cs  (+22 more)
tools/: stage-cef-macos-arm64.sh
(+204 files in other folders)
